SmokeEngine/Tegra-Android/Debug/SmokeEngine.log
Build started 6/8/2014 4:18:02 PM.
     1>Project "C:\SmokeEngine\SmokeEngine\SmokeEngine.vcxproj" on node 2 (build target(s)).
     1>InitializeBuildStatus:
         Creating "Tegra-Android\Debug\SmokeEngine.unsuccessfulbuild" because "AlwaysCreate" was specified.
       ClCompile:
         C:\NVPACK\android-ndk-r9b\toolchains\arm-linux-androideabi-4.8\prebuilt\windows\bin\arm-linux-androideabi-g++.exe 
         SmokeEngine.cpp
         C:\NVPACK\android-ndk-r9b\sources\cxx-stl\gnu-libstdc++\4.8\include\chrono(35): includes this header: 0,
         C:\SmokeEngine\SmokeEngine\from Source\SmokeEngine.cpp(9): 
     1>C:\NVPACK\android-ndk-r9b\sources\cxx-stl\gnu-libstdc++\4.8\include\bits\c++0x_warning.h(32,2): error : #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
          #error This file requires compiler and library support for the \
           ^
     1>Done Building Project "C:\SmokeEngine\SmokeEngine\SmokeEngine.vcxproj" (build target(s)) -- FAILED.

Build FAILED.

Time Elapsed 00:00:00.53
